@@ -58,4 +58,14 @@ size_t ol_path_expand_path_pattern (const char *pattern,
                                     OlMusicInfo *music_info,
                                     char *filename,
                                     size_t len);
+
+/** 
+ * @brief Check whether a file exists and is a regular file.
+ * 
+ * @param filename The path and fullname of the file
+ * 
+ * @return TRUE if the file in the path exists and is a regular file
+ */
+gboolean ol_path_is_file (const char *filename);
+
 #endif /* _OL_PATH_MANAGE_H_ */
